--- a/comp_e.html
+++ b/comp_e.html
@@ -56,48 +56,72 @@
     </aside>
     <main> 
         <h3 id="intro"> Introduction </h3>
-        <p> Information retrieval is a concept that lives in the center of librarianship. Not only is information retrieval frequently asked about by library patrons, it is also a skill that library and information professionals need to strengthen and understand themselves. Information retrieval applies to all kinds of librarians, including archivists, academic librarians, and information technology personnel. Below, I have listed three assignments I completed in this program which taught me how to design, query and evaluate information retrieval systems. </p>
-        <p> Information retrieval has become an increasingly important area of study. Greenberg (2004) describes information retrieval as "human computer interaction," and argues that one of the main motivations behind studying information retrieval is "[circumventing] general users' searching limitations...and ultimately improve users' retrieval results" (105). </p>
-        <p> <span style="font-weight:bolder;"> Designing </span> an information retrieval system means to establish its structure, by: determining the target user, determining the purpose of the retrieval system, and assigning search fields to each item in the retrieval system (and each field will later have specific values assigned). Designing a database collection for easy information retrieval requires extensive planning, as well as an understanding of the database users and of items within the database. </p>
-        <p> <span style="font-weight:bolder;"> Querying </span>is the proper search behaviors that enable accurate information retrieval. Ke et al. (2005) identifies three kinds of information retrieval functions for digital library collections: term generation, cluster generation, and document classification (220). Ke et al. expands upon what each function means: "term generation can be used for indexing, information extraction, and summarization while clustering is useful in searching...classification is important as related to indexing and filtering" (221). Each of these functions can be carried out with online articles, books and other texts, but all are intended to help connect a user to the most relevant materials to their search terms. </p>
-        <p> <span style="font-weight:bolder;"> Evaluating </span>existing information retrieval systems helps LIS professionals understand their target users' needs, and offer the best technology suited to their users' needs. With the arrival of new technology, there continues to be a need for information retrieval methods. Hiremire et al. (2013) states simply: "with the advent of cheap and fast storage, there is an explosive growth in the size and number of documents available in electronic format" (p. 877). Then, Jun et al. (2014) used machine learning to organize and label documents in a retrieval system. More information continues to be shared and stored online, and more sophisticated ways of organizing this information continue to be developed. It is crucial for library and information professionals to remain up-to-date on progress with information retrieval systems. </p>
 
+        <p> Information retrieval is a concept that lives in the center of librarianship. Greenberg (2004) describes information retrieval as "human computer interaction," and argues that one of the main motivations behind studying information retrieval is "[circumventing] general users' searching limitations...and ultimately improve users' retrieval results" (105). Not only is information retrieval frequently asked about by library patrons, it is also a skill that LIS professionals need to strengthen and understand themselves. Information retrieval systems are used by all kinds of librarians, including archivists, academic librarians, and information technology personnel. Making information retrieval systems requires planning, design, query, and evaluation, each of which which I will explain further. Below, as evidence, I have listed three assignments I completed in this program which taught me how to design, query and evaluate information retrieval systems. </p>
+
+        <p> <span style="font-weight:bolder;"> Designing </span> an information retrieval system means to give it structure, by: determining the target user, defining the purpose of the retrieval system, and assigning one set of search fields for all items (categories by which users can filter a search). Designing a database collection for easy information retrieval requires extensive planning, as well as an understanding of the database users and of items within the database. A retrieval system's design impacts all following steps in creating, modifying, and adding to the system in the future. Well-planned design is critical to the functionality of an information retrieval system. </p>
+
+        <p> <span style="font-weight:bolder;"> Querying </span>is the proper search behaviors that enable accurate information retrieval. Ke et al. (2005) identifies three kinds of information retrieval functions for digital library collections: term generation, cluster generation, and document classification (220). Ke et al. expands upon what each function means: "term generation can be used for indexing, information extraction, and summarization while clustering is useful in searching...classification is important as related to indexing and filtering" (221). Each of these functions can be carried out with online articles, books and other texts, but all are intended to help connect a user to the most relevant materials to their search terms. </p>
+
+        <p> <span style="font-weight:bolder;"> Evaluating </span>existing information retrieval systems helps LIS professionals understand their target users' needs, and offer the best technology suited to their users' needs. With the arrival of new technology, there continues to be a need for information retrieval methods. Hiremire et al. (2013) states simply: "with the advent of cheap and fast storage, there is an explosive growth in the size and number of documents available in electronic format" (p. 877). Then, Jun et al. (2014) used machine learning to organize and label documents in a retrieval system. More information continues to be shared and stored online, and more sophisticated ways of organizing this information continue to be developed. It is crucial for library and information professionals to remain up-to-date on progress with information retrieval systems. </p>
 
         <h3 id="evidence"> Evidence </h3>
 
         <h4> 1) Group project: Eyeliner Database </h4>
+
         <a href="includes/Alpha Design Document Group 3D.docx.pdf">  <img src="images/mail.png" style="width:150px; height:150px; display:block;"> Eyeliner database. </a>
+
         <p> This is a group project titled "Alpha Design Document - Group 3D," which I completed in INFO 202: Information retrieval systems. For this assignment, my group and I designed, constructed and evaluated a database. We chose to make a database for eyeliner products. </p>
+
         <ul>
             <li> 1) Design: We had to determine our target user (anyone who wants to use eyeliner) and make the database inclusive for all who qualify as a target user. We selected eight eyeliner products, and assigned each product four fields by which users could filter through the products. </li>
             <li> 2) Query: Within each of the four fields, we assigned each product a unique set of values which made it distinct from the other products. These values became a controlled vocabulary list. </li>
             <li> 3) Evaluate: Once our database was complete, we had another group in our course evaluate our database and offer suggestions for ways to improve it. </li> 
         </ul>
+
         <p> <span style="font-weight:bold;"> My role </span>was to pick two eyeliner products and assign them values for the fields which my group decided would describe eyeliner products and ensure that each eyeliner product is distinct. I also edited other eyeliner product values to ensure all values could be included in a short (but inclusive) list. Each value was assigned to a category that database users were likely to search by, like color, price range, and locations sold. Some of these values were difficult to make finite and discrete, which was essential for the functionality of our database. For example, we couldn't list an endless number of prices for users to search, and eyeliner products vary greatly in price. So we chose price ranges of equal length which included all the prices in our product collection, and enabled users to filter by selected price ranges. In my role, I actively worked to design the database by creating its fields and values. </p>
+
         <p> I included this piece of evidence in this competency because it demonstrates my ability to design, query and evaluate a database, which is an information retrieval system. </p>
 
         <h4> 2) SQL assignment: Coding </h4>
+
         <a href="includes/Assignment 7.pdf">  <img src="images/mail.png" style="width:150px; height:150px; display:block;"> SQL coding </a>
+
         <p> This is an exercise I completed in INFO 246-11: SQL. SQL is a coding language that is used to create, organize, and modify databases and their content. It is similar to using the Excel application, but offers much more functionality. In this assignment, I was able to perform the following actions: </p>
+
         <ul> 
             <li> Display the average price of a book per book type </li>
             <li> Create a list of author names and the number of books they have sold </li>
         </ul>
+
         <p> Being able to use SQL within a database means that I can take full advantage of the data stored and connected in databases by field and value. I can retrieve this data by writing particular SQL code and communicating it to the database server, as demonstrated in the assignment above. This assignment is one particular example of how SQL has shown me how much potential there is to retrieve large amounts of data in databases, and how databases can remain simple on the server. This makes databases useful for users in need of data, and functional for those storing the databases. </p>
+
         <p> I included this piece of evidence in this competency because SQL is a coding language used to create, organize and modify information retrieval systems, particularly databases. Additionally, because I learned how to make detailed and complex search requests with SQL, I have a method of evaluating information systems for quality. </p>
 
         <h4> 3) SQL assignment: Short answer </h4>
+
         <a href="includes/Assignment 10.pdf"> <img src="images/mail.png" style="width:150px; height:150px; display:block;"> SQL short answer </a>
+
         <p> This is an exercise I completed in INFO 246-11: SQL. Here I was tasked to answer questions about how SQL works. I explained how different lists of data are connected in a database through SQL. For example, in a database on books, you may have lists of data like author, title, price, year published, number of copies sold. Moreover, you may have multiple different tables that are connected to one another (like having multiple different excel sheets that you can compare at once). Through SQL, you can easily compare these lists and tables in all kinds of ways, like finding book prices for authors whose names start with "L," or dates for all books that cost over $20. This is possible though SQL joins, keys and entities. </p>
+
         <p> I included this assignment to demonstrate my understanding of databases as information retrieval systems. Using SQL allows me to retrieve complex pieces of information from one database, and in one action. With this assignment, I also demonstrate my ability to understand the inner workings of databases and to evaluate databases for functionality. </p>
+
         <h3 id="conclusion"> Conclusion </h3>
+
         <p> In this program, I learned what information retrieval systems are, how to create a database, and how to query and evaluate databases. First I improved at creating description fields and controlled vocabularies for collections. I have since transitioned to learning computer tools like SQL so that I can keep up with technological advancement. Scholars like Jun et al. now use computers and tools like machine learning to create controlled vocabularies, rather than creating thse vocabularies by hand and by individual judgment. In the future, I plan to continue studying and learning about information retrieval. In particular, I want to learn more about machine learning, and want to continue making databases where I can. Currently at my position as a library assistant at an local college, I've talked to my coworkers about determining which journals we should add to our databases. This would mean reworking our interlibrary loan request records from a spreadsheet into a more organized database. This is one example of how information retrieval will benefit me in the near future, and I believe information retrieval will only become more crucial in the future for finding relevant content online. </p>
+
         <h3 id="references"> References </h3>
+
         <p> Chiranjeevi, H., & Shenoy, M. (2021). Advanced text documents information retrieval system for search services. <i> Cogent Engineering 7</i>(1), </p>
-        <p> Greenberg, J. (2004). User comprehension and searching with information retrieval thesauri. <i> Cataloging & Classification Quarterly 37</i>(3). 103-120. <a href="includes/comp_a/User Comprehension and Searching with Information Retrieval Thesauri.pdf"> DOI: 10.1300/J104v37n03_08 </a>
+
+        <p> Greenberg, J. (2004). User comprehension and searching with information retrieval thesauri. <i> Cataloging & Classification Quarterly 37</i>(3). 103-120. <a href="includes/comp_a/User Comprehension and Searching with Information Retrieval Thesauri.pdf"> DOI: 10.1300/J104v37n03_08 </a></p>
+
         <p> Hiremare, S., Chougule, S., Palshikar, G., & Chakraborti, S. (2013, July 15). Document classification by topic labeling. <i> Association for Computing Machinery (ACM) SIGIR conference on research and development in information retrieval. </i></p>
+
         <p> Jun, S., Park, S., & Jang, D. (2014). Document clustering method using dimension reduction and support vector clustering to overcome sparsesness. <i> Expert Systems with Applications 41</i>(7), 3204-3212.</p>
-        <p> Ke, W., Fu, Y., & Mostafa, J. (2005). Advanced information retrieval web services for digital libraries. <i> Library Collections, Acquisitions, and Technical Services 29</i>(2), 220-224. DOI: <a href="includes/Advanced information retrieval Web services for digital libraries.pdf"> 10.1080/14649055.2005.10766053 </a> 
+
+        <p> Ke, W., Fu, Y., & Mostafa, J. (2005). Advanced information retrieval web services for digital libraries. <i> Library Collections, Acquisitions, and Technical Services 29</i>(2), 220-224. DOI: <a href="includes/Advanced information retrieval Web services for digital libraries.pdf"> 10.1080/14649055.2005.10766053 </a> </p>
+
     </main>
     <footer id="footer"> 
         <h3> Contact me: </h3>
