--- a/comp_f.html
+++ b/comp_f.html
@@ -18,7 +18,7 @@
     <nav> 
         <ul class="navbar"> 
         <li class="navitem"> <a href="main.html"> Main page </a></li>
-        <li class="navitem"> <a href="intro.html"> Introduction </a></li>
+        <li class="navitem"> <a href="index.html"> Introduction </a></li>
         <li class="navitem">  <a href="comp_a.html"> A </a></li>
         <li class="navitem">  <a href="comp_b.html"> B </a></li>
         <li class="navitem">  <a href="comp_c.html"> C </a></li>
